# CaseMinds

./: .env.example  .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  CLAUDE.md  DATABASE_SCHEMA.md  DATA_PIPELINE.md  DEPLOYMENT.md  EVALUATION.md  Makefile  PRD.md  README.md  RESUME_IMPACT.md  TASKS.md  TECH_STACK.md  alembic.ini  package.json  pyproject.toml  render.starter.yaml  render.yaml  requirements.txt
.github/workflows/: ci.yml  eval.yml
data/: caseminds.db-shm  caseminds.db-wal
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentPipeline.tsx  CitationCard.tsx  ConfidenceMeter.tsx  FeedbackBar.tsx  Header.tsx  OverruledBanner.tsx  ResultPanel.tsx  SearchBar.tsx  Sidebar.tsx
scripts/: build_render.sh  check_eval_regression.py  debug_retrieval.py  seed.py  seed_statutes.py  test_queries.py  trace_pipeline.py  warmup_models.py
services/: config.py
services/agents/: graph_traversal_agent.py  llm_client.py  logger.py  pipeline.py  query_classifier.py  retrieval_agent.py  state.py  verification_agent.py
services/api/: database.py  main.py  models.py  schemas.py  seed_job.py
services/graph/: graph_store.py
services/ingestion/: citation_extractor.py  corpus_seed.py  db_writer.py  embedder.py  parser.py  scraper.py
services/retrieval/: bm25_store.py  chroma_store.py  search.py
services/ui/: app.py
tests/eval/: test_citation_accuracy.py  test_overruled_detection.py
tests/unit/: test_agents.py  test_parser.py
(+8 files in other folders)
