[tool.poetry]
name = "caseminds"
version = "0.1.0"
description = "GraphRAG legal research assistant for Indian law"
authors = ["CaseMinds"]
readme = "README.md"
packages = [{ include = "services" }]

[tool.poetry.dependencies]
python = "^3.12"

# API
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
streamlit = "^1.40"

# AI / RAG
langchain-groq = "^0.2"
langchain-anthropic = "^0.3"
langgraph = "^0.2"
chromadb = "^0.6"
sentence-transformers = "^3.3"
rank-bm25 = "^0.2"

# Graph
networkx = "^3.4"

# Data / Parsing
httpx = "^0.28"
pydantic = "^2.10"
pydantic-settings = "^2.7"
rapidfuzz = "^3.10"
python-dotenv = "^1.0"

# DB
sqlalchemy = "^2.0"
alembic = "^1.14"

# Eval (optional)
ragas = { version = "^0.2", optional = true }

[tool.poetry.extras]
eval = ["ragas"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.8"
black = "^24.10"
mypy = "^1.13"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["scripts/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
